# jarvis-assistant

./: .gitignore  README.md  install.sh  jarvis  jarvis.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: main.py
config/: settings.py
core/: ai_engine.py  database.py  features.py  health.py  logger.py  scheduler.py  smart_features.py  voice_assistant.py  weather.py
data/: startup_apps.json
gui/: main_window.py
plugins/: __init__.py  loader.py
tests/: test_ai_engine.py  test_database.py
