[project]
name = "jarvis"
version = "1.0.0"
description = "JARVIS - Personal AI Assistant"
requires-python = ">=3.8"
dependencies = [
    "ollama>=0.1.0",
    "PyQt6>=6.5.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "apscheduler>=3.10.0",
    "psutil>=5.9.0",
    "plyer>=2.1.0",
    "edge-tts>=6.1.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
jarvis = "jarvis:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["cli*", "config*", "core*", "gui*", "utils*", "plugins*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
